@@ -2,6 +2,7 @@
 
 	* Exit without arguments in a trap should use status outside traps.
 	* Do not allow break to break across function calls.
+	* Move common skipcount logic into skiploop.
 
 2014-10-03  Herbert Xu <herbert@gondor.apana.org.au>
 
